# twcaldav

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  TESTING.md  TODO.md  config.toml.example  docker-compose.test.yml  main.py  prompt.md  pyproject.toml
.github/workflows/: README.md  ci.yml  release.yml  test.yml
docker/radicale/: Dockerfile  config  users
docker/taskwarrior/: Dockerfile
scripts/: run-integration-tests.sh  setup-radicale-test-data.sh  wait-for-service.sh
src/twcaldav/: __init__.py  caldav_client.py  cli.py  config.py  field_mapper.py  logger.py  sync_classifier.py  sync_comparator.py  sync_engine.py  sync_types.py  taskwarrior.py
tests/: test_caldav_client.py  test_cli.py  test_config.py  test_field_mapper.py  test_logger.py  test_sync_comparator.py  test_sync_engine.py  test_taskwarrior.py
tests/fixtures/: test_config.toml
tests/integration/: __init__.py  conftest.py  helpers.py  test_caldav_to_tw.py  test_e2e.py  test_e2e.py.backup  test_multi_client.py  test_tw_to_caldav.py
