[project]
name = "twcaldav"
version = "1.0.0"
description = "Bidirectional synchronization between TaskWarrior and CalDAV servers"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Pablo J. Caro Martin", email = "me@pcaro.es" }]
keywords = [
  "taskwarrior",
  "caldav",
  "sync",
  "todo",
  "productivity",
  "radicale",
  "nextcloud",
  "baikal",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
]
dependencies = ["caldav>=2.1.2"]

[project.urls]
Homepage = "https://github.com/pcaro90/twcaldav"
Repository = "https://github.com/pcaro90/twcaldav"
Issues = "https://github.com/pcaro90/twcaldav/issues"
Documentation = "https://github.com/pcaro90/twcaldav#readme"

[project.scripts]
twcaldav = "twcaldav.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twcaldav"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/scripts",
  "/tests",
  "docker-compose.test.yml",
  "TODO.md",
  "MIGRATION.md",
  "PLAN.md",
  "TESTING.md",
  "AGENTS.md",
  "prompt.md",
  "results.txt",
  "test-results.xml",
  ".python-version",
  ".pre-commit-config.yaml",
]

[dependency-groups]
dev = ["pytest>=9.0.1", "pytest-cov>=7.0.0", "ruff>=0.14.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
# Add verbose output by default
addopts = "-v"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
version_files = ["src/twcaldav/__init__.py"]
